objects/RegionsBank__c.object
<CustomObject>
    <fields>
        <fullName>June1__c</fullName>
        <label>June1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>June4_field__c</fullName>
        <label>June4 field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_text__c</fullName>
        <label>RB text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFS_Demo__c</fullName>
        <label>TFS Demo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>RegionsBank</label>
    <nameField>
        <label>RegionsBank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RegionsBanks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>